cabal-version:      3.0
name:               riml
version:            1.0.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wextra

executable riml
    import:           warnings
    main-is:          Main.hs
    other-modules:
        , AST
        , Token
        , Lexer
        , Parser
    -- other-extensions:
    build-depends:
        , base ^>=4.21.0.0
        , array
        , containers
        , prettyprinter
        , text
        , optparse-applicative
    hs-source-dirs:   app
    default-language: GHC2024
